# mint-syntax

./: .gitignore  .pre-commit-config.yaml  README.md  REAMDE.md  sample.env
.github/: PULL_REQUEST_TEMPLATE.md  bug-report.yaml  feature-request.yaml
.github/ISSUE-TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: auto-add-to-project.yml  ci-backend.yml  ci-frontend.yml  lint-backend.yml  lint-frontend.yml
backend/: pyproject.toml  ruff.toml
backend/src/: auth.py  config.py  csrf.py  database.py  dependencies.py  exception_handlers.py  main.py  models.py
backend/src/api/: dependencies.py  ideas.py  main.py  util.py
backend/src/api/routes/: auth.py  csrf.py  ideas.py  me.py  users.py
backend/src/scripts/: seed_data.py
backend/tests/: conftest.py  data_sample.py
backend/tests/api/: test_util.py
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.browser.config.js
frontend/src/: App.jsx  Login.jsx  Register.jsx  main.jsx  styles.css
frontend/src/components/: Buttons.jsx  DevOnly.jsx  EnsureAdmin.jsx  EnsureLogin.jsx  ErrorBoundary.jsx  Errors.jsx  Errors.test.jsx  FeatureCard.jsx  Footer.jsx  FormGroup.jsx  Header.jsx  HelpPage.jsx  IdeaForm.jsx  IdeaFormSection.jsx  IdeaListItem.jsx  IdeaSubmissionForm.jsx  IdeasList.jsx  LandingPageContent.jsx  LoginForm.jsx  Pagination.jsx  RegisterForm.jsx  ScrollToHashElement.jsx  Spinny.jsx  TeamMemberCard.jsx  VoteButtons.jsx  VotesList.jsx
frontend/src/hooks/: useApi.js  (+1 more)
(+34 files in other folders)
