[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "motor>=3.7.1",
    "odmantic>=1.0.2",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

disallow_untyped_defs = true
show_error_codes = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
