[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-csrf-protect>=1.0.3",
    "faker>=37.4.0",
    "fastapi[standard]>=0.115.14",
    "motor>=3.7.1",
    "odmantic>=1.0.2",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
    "types-passlib>=1.7.7.20250602",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

disallow_untyped_defs = true
show_error_codes = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
